Updated config - Added settings for: BLADE=SQsTwazD#_9VL8j41RZ2lpe0AEJwEckhypFgc1JstY6X7PqIwIOk

--- a/config.json
+++ b/config.json
@@ -4710,10 +4710,8 @@
   },
   "BLADE=SQsTwazD#_9VL8j41RZ2lpe0AEJwEckhypFgc1JstY6X7PqIwIOk": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "💚"
-    ],
-    "AUTO_TYPING": true,
+    "STATUS_REACT_EMOJIS": "❤️",
+    "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
@@ -4725,7 +4723,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "uCOkT"
+    "PASS": "ntqf4"
   },
   "ahhaa": {
     "public": true,
