--- a/config.json
+++ b/config.json
@@ -4798,7 +4798,7 @@
   "BLADE=DJsCSLQZ#igwa7WaV42S7ZNig2iHPc_7Aswcpwo-kYVurOhshynA": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": false,
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": true,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
