--- a/config.json
+++ b/config.json
@@ -4826,7 +4826,7 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
-    "AUTO_READ": false,
+    "AUTO_READ": true,
     "PASS": "tlPe0"
   }
 }
