Updated STATUS_REACT_EMOJIS to ❤️💞🤍 for session BLADE=SU0AHLjR#lbI1RWtv_GYZoVtnpjbeWdpT-LDOgZueUXAvv4UcFgQ

--- a/config.json
+++ b/config.json
@@ -4814,7 +4814,9 @@
   },
   "BLADE=SU0AHLjR#lbI1RWtv_GYZoVtnpjbeWdpT-LDOgZueUXAvv4UcFgQ": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "❤️💞🤍"
+    ],
     "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": true,
