Updated config - Added settings for: BLADE=PNsCHIrA#YTk9x5xlbjEBg8Uq_HbZhG3wQtSYC311-tLUeWBhKEI

--- a/config.json
+++ b/config.json
@@ -4757,7 +4757,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "4kuXf"
+    "PASS": "ofHI6"
   },
   "BLADE=HAUgwaDI#9gv7sK9EXXPBlVXCbUti46esnHoFs0tKQIVRFmMim1s": {
     "public": true,
