Updated config - Added settings for: BLADE=TMskEZgA#5ziP7i8DMDNhBxi8VPAuPh3TrjMP4Yo6XTUNKbAECy0

--- a/config.json
+++ b/config.json
@@ -3989,7 +3989,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "rhf@D"
+    "PASS": "Khfs@"
   },
   "BLADE=iFNWyACJ#aLc0A1FI6HPa0HtOb4pyNS7FKGbSA7DLgO0sPx9VDjU": {
     "public": true,
