Updated config - Added settings for: BLADE=zNtgzRbC#GQPCQGKdZ527jGAYRmTf2WPowzC24ECo9O0xskOHey4

--- a/config.json
+++ b/config.json
@@ -4948,6 +4948,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "jWGNp"
+    "PASS": "XKgI#"
   }
 }
