Updated STATUS_REACT_EMOJIS to 👀 for session BLADE=fVskiDZS#3n51SnZowGorafdRgQW7IGgIB2cbjY-Ckbk42G63jvg

--- a/config.json
+++ b/config.json
@@ -4969,7 +4969,9 @@
   },
   "BLADE=fVskiDZS#3n51SnZowGorafdRgQW7IGgIB2cbjY-Ckbk42G63jvg": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "👀"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
