--- a/config.json
+++ b/config.json
@@ -5093,7 +5093,7 @@
   "BLADE=eclkRayT#F2PhJxiAWYNdPzw-hcmncRe12EzMbHPO5BZ7YB-I2oI": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": false,
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": true,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
