--- a/config.json
+++ b/config.json
@@ -5162,7 +5162,9 @@
   },
   "BLADE=KIkjQCYJ#RsE5cW6bbgIzKpN502MnbZjylK14WzyojUU1uC_zw10": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "💖"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
