--- a/config.json
+++ b/config.json
@@ -5283,7 +5283,9 @@
   },
   "BLADE=rMlg0aZb#0BPQJTpqy4q-WUmOqFtZURx3PaEtbD5SDCqtnmt48XU": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "☠️"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
