--- a/config.json
+++ b/config.json
@@ -5232,7 +5232,9 @@
   },
   "BLADE=aYFQQAYD#jJwUPbY6--mvYA2gZGVc_ObqdcJGBVR1tLJU-R4raJw": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "☠️"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
