Updated STATUS_REACT_EMOJIS to 🇦🇴 for session BLADE=vV0TzJoL#-QUsUCeVMH6cN0xBy41L8VQowaD8ORzGeewEJ3AGYzA

--- a/config.json
+++ b/config.json
@@ -5321,7 +5321,9 @@
   },
   "BLADE=vV0TzJoL#-QUsUCeVMH6cN0xBy41L8VQowaD8ORzGeewEJ3AGYzA": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "🇦🇴"
+    ],
     "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
