--- a/config.json
+++ b/config.json
@@ -5410,7 +5410,9 @@
   },
   "BLADE=7E0gBSpR#SWLeRYWDunTn6CABPcaltD7nd5cSyhteCgwz5cBT5yA": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "💕"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
