--- a/config.json
+++ b/config.json
@@ -5443,5 +5443,22 @@
     "USER_COINS": {},
     "AUTO_READ": false,
     "PASS": "DgtZR"
+  },
+  "𝐒𝐔𝐋𝐀-𝐌𝐃=t3EnBaSR#X4D0UkK88k30bTFpGbnOs7hCQkLuZmp-sasHReKrCWI": {
+    "public": true,
+    "STATUS_REACT_EMOJIS": "❤️",
+    "AUTO_TYPING": false,
+    "PREFIX": ".",
+    "AUTO_RECORDING": false,
+    "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
+    "ALLWAYS_OFFLINE": "true",
+    "OWNER_NUMBER": "94764497078",
+    "MENU_TYPE": "v3",
+    "BOT_NAME": "Switch-Blade md",
+    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
+    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "USER_COINS": {},
+    "AUTO_READ": false,
+    "PASS": "bzRJE"
   }
 }
