--- a/config.json
+++ b/config.json
@@ -5492,7 +5492,7 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
-    "AUTO_READ": false,
+    "AUTO_READ": true,
     "PASS": "cHOfD"
   },
   "BLADE=iQUyQAYZ#YUAPl0TcLKBdx6JTYAPnUgApyMgAO56dqv3Vufo6qV4": {
