Updated AUTO_TYPING to on for session BLADE=bUlQEShI#9lCqatnOGAJQTKn3cD45XeU4vbuj-0F4b5TjwbeIu4s

--- a/config.json
+++ b/config.json
@@ -5483,7 +5483,7 @@
     "STATUS_REACT_EMOJIS": [
       "✅"
     ],
-    "AUTO_TYPING": false,
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
