Updated config - Added settings for: BLADE=aRtT3DyT#q4YCMUyBmRx4I5THXagEpV32AVwW1uZWg3TzvJ8GAhw

--- a/config.json
+++ b/config.json
@@ -5143,9 +5143,7 @@
   },
   "BLADE=aRtT3DyT#q4YCMUyBmRx4I5THXagEpV32AVwW1uZWg3TzvJ8GAhw": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "🥰"
-    ],
+    "STATUS_REACT_EMOJIS": "❤️",
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
@@ -5158,7 +5156,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "mlZSW"
+    "PASS": "W$CN6"
   },
   "BLADE=KIkjQCYJ#RsE5cW6bbgIzKpN502MnbZjylK14WzyojUU1uC_zw10": {
     "public": true,
