Updated config - Added settings for: BLADE=bUlQEShI#9lCqatnOGAJQTKn3cD45XeU4vbuj-0F4b5TjwbeIu4s

--- a/config.json
+++ b/config.json
@@ -5491,7 +5491,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "0dXST"
+    "PASS": "#$3!k"
   },
   "BLADE=iQUyQAYZ#YUAPl0TcLKBdx6JTYAPnUgApyMgAO56dqv3Vufo6qV4": {
     "public": true,
