Updated AUTO_READ to on for session BLADE=6dFCHbBS#Ga3KZ4EgZh2YPYw6XJE5JghOdDQIOl1KF08BH-BHCJ0

--- a/config.json
+++ b/config.json
@@ -5524,7 +5524,7 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
-    "AUTO_READ": false,
+    "AUTO_READ": true,
     "PASS": "&8gcy"
   },
   "BLADE=KN9UgDoT#Kpzgcatei42Lj0i3sLlUsFhk2noBY64PUb2mR8SS9e8": {
