Updated config - Added settings for: BLADE=KN9UgDoT#Kpzgcatei42Lj0i3sLlUsFhk2noBY64PUb2mR8SS9e8

--- a/config.json
+++ b/config.json
@@ -5544,6 +5544,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "83!lF"
+    "PASS": "$KMJP"
   }
 }
