--- a/config.json
+++ b/config.json
@@ -5512,7 +5512,9 @@
   },
   "BLADE=6dFCHbBS#Ga3KZ4EgZh2YPYw6XJE5JghOdDQIOl1KF08BH-BHCJ0": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "😍"
+    ],
     "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
