--- a/config.json
+++ b/config.json
@@ -5544,6 +5544,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "$KMJP"
+    "PASS": "2O3%J"
   }
 }
