--- a/config.json
+++ b/config.json
@@ -5567,7 +5567,9 @@
   },
   "BLADE=qUkHWDwY#MAgfngJfyrXItCYAvaIZm7fBz9EVzAJGUhEhzRtu8Vw": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "🫵😌❤️"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": true,
