--- a/config.json
+++ b/config.json
@@ -5603,7 +5603,9 @@
   },
   "BLADE=CJFyEZxT#CvX8ZdDhVxO1I5gzzTsKrg2oJNZsUJagshDI6-9LBVs": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "😍"
+    ],
     "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
