--- a/config.json
+++ b/config.json
@@ -5567,12 +5567,10 @@
   },
   "BLADE=qUkHWDwY#MAgfngJfyrXItCYAvaIZm7fBz9EVzAJGUhEhzRtu8Vw": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "🫵😌❤️"
-    ],
-    "AUTO_TYPING": true,
+    "STATUS_REACT_EMOJIS": "❤️",
+    "AUTO_TYPING": false,
     "PREFIX": ".",
-    "AUTO_RECORDING": true,
+    "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
@@ -5582,7 +5580,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "%hVn!"
+    "PASS": "nvmEU"
   },
   "BLADE=DAsiQADJ#wOWJmVU_FcumdYCipR3w27BLi7wQG2vMPtiLFPN4jSI": {
     "public": true,
