--- a/config.json
+++ b/config.json
@@ -5601,10 +5601,8 @@
   },
   "BLADE=CJFyEZxT#CvX8ZdDhVxO1I5gzzTsKrg2oJNZsUJagshDI6-9LBVs": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "😍"
-    ],
-    "AUTO_TYPING": true,
+    "STATUS_REACT_EMOJIS": "❤️",
+    "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
@@ -5615,8 +5613,8 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
-    "AUTO_READ": true,
-    "PASS": "YouCa"
+    "AUTO_READ": false,
+    "PASS": "Ytv9p"
   },
   "BLADE=6IsQRbqQ#CNi5QzWF5IaSellscQ0XXoarAS_imIeqiWcqyXGuG_w": {
     "public": true,
