Updated AUTO_READ to on for session BLADE=CJFyEZxT#CvX8ZdDhVxO1I5gzzTsKrg2oJNZsUJagshDI6-9LBVs

--- a/config.json
+++ b/config.json
@@ -5613,7 +5613,7 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
-    "AUTO_READ": false,
+    "AUTO_READ": true,
     "PASS": "Ytv9p"
   },
   "BLADE=6IsQRbqQ#CNi5QzWF5IaSellscQ0XXoarAS_imIeqiWcqyXGuG_w": {
