--- a/config.json
+++ b/config.json
@@ -5796,7 +5796,9 @@
   },
   "BLADE=Pc1VwQBJ#tuqqS48x2s5MrxHVMYNGIgyHqfYBHc2n9MoZe72yp40": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "💀"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
