--- a/config.json
+++ b/config.json
@@ -5816,7 +5816,7 @@
   "BLADE=2RlCRTQA#D7UfnZAllgdTmtGRtU0L4-e42oTY7_W07_QlYLkbJMs": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": false,
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
