Updated STATUS_REACT_EMOJIS to 😌 for session BLADE=2RlCRTQA#D7UfnZAllgdTmtGRtU0L4-e42oTY7_W07_QlYLkbJMs

--- a/config.json
+++ b/config.json
@@ -5815,7 +5815,9 @@
   },
   "BLADE=2RlCRTQA#D7UfnZAllgdTmtGRtU0L4-e42oTY7_W07_QlYLkbJMs": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "😌"
+    ],
     "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": true,
