Updated config - Added settings for: BLADE=jRM3WCQQ#jBh-LcCaTDMlDEMRKROE9eb_ZCNquCFN3Kx8nIFdWME

--- a/config.json
+++ b/config.json
@@ -5898,6 +5898,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "7Fi0S"
+    "PASS": "ON7%6"
   }
 }
