--- a/config.json
+++ b/config.json
@@ -5898,6 +5898,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "ON7%6"
+    "PASS": "ny%xn"
   }
 }
