--- a/config.json
+++ b/config.json
@@ -5815,12 +5815,10 @@
   },
   "BLADE=2RlCRTQA#D7UfnZAllgdTmtGRtU0L4-e42oTY7_W07_QlYLkbJMs": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "😌"
-    ],
-    "AUTO_TYPING": true,
+    "STATUS_REACT_EMOJIS": "❤️",
+    "AUTO_TYPING": false,
     "PREFIX": ".",
-    "AUTO_RECORDING": true,
+    "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
@@ -5830,7 +5828,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "EXo90"
+    "PASS": "1HaRT"
   },
   "BLADE=mcVkBRKC#EEUpQrnueK0AsqhOsb3xjXisLaxUQpux93gCqM_kwUQ": {
     "public": true,
