Updated AUTO_READ to off for session BLADE=fN1wFDSK#GCZjeifA8aRVYAiULyTwKg_bS3I61yjK-654uFhLXhA

--- a/config.json
+++ b/config.json
@@ -5982,7 +5982,7 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
-    "AUTO_READ": true,
+    "AUTO_READ": false,
     "PASS": "zQDM%"
   },
   "BLADE=uJUz2LCS#tkAopCw3_qEAEBrIgmG9wdVxPRxh1JDWHCA8eVeravU": {
