Updated config - Added settings for: BLADE=2RlCRTQA#D7UfnZAllgdTmtGRtU0L4-e42oTY7_W07_QlYLkbJMs

--- a/config.json
+++ b/config.json
@@ -5828,7 +5828,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "1HaRT"
+    "PASS": "WrMEo"
   },
   "BLADE=mcVkBRKC#EEUpQrnueK0AsqhOsb3xjXisLaxUQpux93gCqM_kwUQ": {
     "public": true,
