--- a/config.json
+++ b/config.json
@@ -6041,7 +6041,7 @@
   "BLADE=iJ9UBAbb#ZVfPz9oCrSJvN7J5xUh-FqIUmr09-X5f5ZxL5yQXAyg": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": false,
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
