Updated config - Added settings for: BLADE=HE1AxAia#Q1QghaUjgZpMTabrWuT3z4yLwGOzbrJi4BCK-tYOlDA

--- a/config.json
+++ b/config.json
@@ -6036,7 +6036,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "TJv6#"
+    "PASS": "I@YlO"
   },
   "BLADE=iJ9UBAbb#ZVfPz9oCrSJvN7J5xUh-FqIUmr09-X5f5ZxL5yQXAyg": {
     "public": true,
