Updated config - Added settings for: BLADE=iJ9UBAbb#ZVfPz9oCrSJvN7J5xUh-FqIUmr09-X5f5ZxL5yQXAyg

--- a/config.json
+++ b/config.json
@@ -6040,12 +6040,10 @@
   },
   "BLADE=iJ9UBAbb#ZVfPz9oCrSJvN7J5xUh-FqIUmr09-X5f5ZxL5yQXAyg": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "😌"
-    ],
-    "AUTO_TYPING": true,
+    "STATUS_REACT_EMOJIS": "❤️",
+    "AUTO_TYPING": false,
     "PREFIX": ".",
-    "AUTO_RECORDING": true,
+    "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
@@ -6055,7 +6053,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "F&cl&"
+    "PASS": "kwP&r"
   },
   "BLADE=eF8x2YhZ#k3h4X59SPU9U2VeyPbmRFCv7hVjkCJnFdMaXyBvvOeQ": {
     "public": true,
